[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/base/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/base/settings/keybind.gd" type="Script" id=2]
[ext_resource path="res://scenes/base/settings/keybind/keybind_action.tscn" type="PackedScene" id=3]






[node name="keybind" type="TabBar"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
keybind_action = ExtResource( 3 )

[node name="Settings_Scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_VBC" type="VBoxContainer" parent="Settings_Scroll"]
offset_right = 854.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Key_Bind_VBC" type="VBoxContainer" parent="Settings_Scroll/Settings_VBC"]
offset_right = 854.0
